--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -9,19 +9,9 @@
         <i class="fas fa-chart-line fa-fw me-3"></i><span>Dashboard</span>
       </a>
 
-      <a href="/users/{{id}}" class="list-group-item list-group-item-action py-2 ripple
-        {{#userManagementActive}}active{{/userManagementActive}}">
-        <i class="fas fa-users fa-fw me-3"></i><span>User Management</span>
-      </a>
-
-      <a href="/categories/{{id}}" class="list-group-item list-group-item-action py-2 ripple
-        {{#categoriesActive}}active{{/categoriesActive}}">
-        <i class="fa-solid fa-list-ul fa-fw me-3"></i><span>Categories</span>
-      </a>
-
-      <a href="/skills/{{id}}" class="list-group-item list-group-item-action py-2 ripple
-        {{#skillsActive}}active{{/skillsActive}}">
-        <i class="fa-regular fa-circle-dot fa-fw me-3"></i><span>Skills</span>
+      <a href="/announcement/{{id}}" class="list-group-item list-group-item-action py-2 ripple
+        {{#announcementActive}}active{{/announcementActive}}">
+        <i class="fa-solid fa-list-ul fa-fw me-3"></i><span>Announcement</span>
       </a>
 
     </div>
