--- a/src/main/resources/templates/register-employer.html
+++ b/src/main/resources/templates/register-employer.html
@@ -60,10 +60,16 @@
                 </div>
               </div>
               <div class="row">
-                <div class="col-md-12 mb-4 pb-2">
+                <div class="col-md-6 mb-4 pb-2">
                   <div class="form-outline">
                     <input type="email" id="email" name="email" class="form-control form-control-lg" />
                     <label class="form-label" for="email">Email<span class="error">*</span></label>
+                  </div>
+                </div>
+                <div class="col-md-6 mb-4 pb-2">
+                  <div class="form-outline">
+                    <input type="email" id="phoneNumber" name="phoneNumber" pattern="[0-9]{10}" class="form-control form-control-lg" />
+                    <label class="form-label" for="phoneNumber">Phone number<span class="error">*</span></label>
                   </div>
                 </div>
               </div>
