--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -27,39 +27,59 @@
         <div class="formm">
             <form class="form-container" method="post" enctype="multipart/form-data">
                 {{#employer}}
-                <div class="row" id="myForm">
-                    <div class="col-6">
-                        <p id="page-title"><b>My Profile</b></p>
-
-                        <label for="companyName"><b>Company name</b></label><br>
-                        <input maxlength="100" id="companyName" name="name" disabled value="{{companyName}}">
-                        <br><br>
-                        <label for="street"><b>Street</b></label><br>
-                        <input type="text" value="{{street}}" id="street" name="street" disabled>
-                        <br><br>
-                    </div>
-                    <div class="col-6">
-                        <div id="editButton">
-                            <button type="button" class="btn btn-primary icon-spacing" data-mdb-toggle="modal"
-                                    data-mdb-target="#edit{{id}}">
-                                <i class="fa-regular fa-pen-to-square"></i>
-                                <span class="remove-action-name">Edit</span>
-                            </button>
+                <div id="myForm">
+                    <div class="row">
+                        <div class="col-6">
+                            <p id="page-title"><b>My Profile</b></p>
                         </div>
-                        <br>
-                        <label for="email"><b>Email</b></label><br>
-                        <input type="email" value="{{email}}" id="email" name="email" disabled>
-                        <br><br>
+                        <div class="col-6">
+                            <div id="editButton">
+                                <button type="button" class="btn btn-primary icon-spacing" data-mdb-toggle="modal"
+                                        data-mdb-target="#edit{{id}}">
+                                    <i class="fa-regular fa-pen-to-square"></i>
+                                    <span class="remove-action-name">Edit</span>
+                                </button>
+                            </div>
+                        </div>
                     </div>
-                    <div class="col-6">
-                        <label for="country"><b>Country</b></label><br>
-                        <input type="text" value="{{country}}" id="country" name="country" disabled>
-                        <br><br>
+                    <div class="row">
+                        <div class="col-6">
+                            <label for="companyName"><b>Company name</b></label><br>
+                            <input maxlength="100" id="companyName" name="name" disabled value="{{companyName}}">
+                            <br><br>
+                        </div>
+                        <div class="col-6">
+                            <label for="email"><b>Email</b></label><br>
+                            <input type="email" value="{{email}}" id="email" name="email" disabled>
+                            <br><br>
+                        </div>
                     </div>
-                    <div class="col-6">
-                        <label for="city"><b>City</b></label><br>
-                        <input type="text" value="{{city}}" id="city" name="city" disabled>
-                        <br><br>
+                    <div class="row">
+                        <div class="col-6">
+                            <label for="phone"><b>Phone number</b></label><br>
+                            <input type="text" value="{{phoneNumber}}" id="phone" name="phone" disabled>
+                            <br><br>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-12">
+                            <label for="street"><b>Address</b></label><br>
+                            <input type="text" value="{{street}}" id="street" name="street" disabled>
+                            <br><br>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-6">
+                            <label for="country"><b>Country</b></label><br>
+                            <input type="text" value="{{country}}" id="country" name="country" disabled>
+                            <br><br>
+                        </div>
+                        <div class="col-6">
+                            <label for="city"><b>City</b></label><br>
+                            <input type="text" value="{{city}}" id="city" name="city" disabled>
+                            <br><br>
+                        </div>
                     </div>
                     <div class="row">
                         <div class="col-12">
@@ -88,30 +108,48 @@
                                     aria-label="Close"></button>
                         </div>
                         <div class="mymodal">
-                            <div class="row">
-                                <div class="col-6">
-                                    <div class="mb-3">
-                                        <div class="form-outline">
+                            <div class="mb-3">
+                                <div class="form-outline">
+                                    <div class="row">
+                                        <div class="col-6">
                                             <label for="companyName{{id}}">Company name<span
                                                     class="error">*</span></label><br>
                                             <input id="companyName{{id}}" class="fields" name="companyName"
                                                    value="{{companyName}}"
                                                    required>
                                             <br><br>
+                                        </div>
+                                        <div class="col-6">
+                                            <label for="email{{id}}">Email<span class="error">*</span></label><br>
+                                            <input type="email" value="{{email}}" class="fields" id="email{{id}}"
+                                                   name="email"
+                                                   required>
+                                            <br><br>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-6">
+                                            <label for="phoneNumber{{id}}">Phone number<span
+                                                    class="error">*</span></label><br>
+                                            <input type="tel" value="{{phoneNumber}}" class="fields"
+                                                   id="phoneNumber{{id}}" name="phoneNumber"
+                                                   required>
+                                            <br><br>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-12">
                                             <label for="street{{id}}">Street<span class="error">*</span></label><br>
-                                            <input type="text" value="{{street}}" class="fields" id="street{{id}}"
+                                            <input type="text" value="{{street}}" class="field" id="street{{id}}"
                                                    name="street"
                                                    required>
                                             <br><br>
                                         </div>
                                     </div>
+
                                 </div>
-                                <div class="col-6">
-                                    <label for="email{{id}}">Email<span class="error">*</span></label><br>
-                                    <input type="email" value="{{email}}" class="fields" id="email{{id}}" name="email"
-                                           required>
-                                    <br><br>
-                                </div>
+                            </div>
+                            <div class="row">
                                 <div class="col-6">
                                     <label for="country{{id}}">Country<span class="error">*</span></label><br>
                                     <input type="text" value="{{country}}" class="fields" id="country{{id}}"
