added favicon, logo and images

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -12,12 +12,12 @@
 
 <section class="vh-100">
     <div class="container-fluid h-custom">
-        <div class="row d-flex justify-content-center align-items-center h-100">
-            <div class="col-md-9 col-lg-6 col-xl-5">
-                <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/draw2.webp"
-                     class="img-fluid" alt="Sample image">
+        <div class="row d-flex  align-items-center h-100">
+            <div class="col-md-5 col-lg-6 col-xl-5">
+                <img src="../static/images/jobs-login.jpeg"
+                     class="image">
             </div>
-            <div class="col-md-7 col-lg-5 col-xl-3 offset-xl-1">
+            <div class="col-md-9 col-lg-5 col-xl-3 offset-xl-2">
                 <form action="login/submit" method="post">
 
                     <!-- Email input -->
