--- a/src/main/resources/templates/fragments/links.html
+++ b/src/main/resources/templates/fragments/links.html
@@ -5,3 +5,4 @@
 <!-- MDB -->
 <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.1.0/mdb.min.css" rel="stylesheet"/>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.1.0/mdb.min.js"></script>
+<link rel="icon" type="image/x-icon" href="../static/images/favicon.png">
