--- a/src/main/resources/static/style/company-profile-style.css
+++ b/src/main/resources/static/style/company-profile-style.css
@@ -45,7 +45,7 @@ background: #e7e7e7
     padding-left: 8px;
 }
 
-#street, .field {
+#address, .field {
     box-sizing: border-box;
 
     width: 95%;
