--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -37,7 +37,7 @@
                 </ul>
             </li>
             &nbsp;&nbsp;&nbsp;
-            {{#employer}}
+            {{#company}}
             <!-- Avatar -->
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle hidden-arrow d-flex align-items-center" href="/profile"
@@ -57,7 +57,7 @@
                     </li>
                 </ul>
             </li>
-            {{/employer}}
+            {{/company}}
         </ul>
     </div>
     <!-- Container wrapper -->
