--- a/src/main/resources/templates/accounts.html
+++ b/src/main/resources/templates/accounts.html
@@ -16,18 +16,18 @@
     <div class="row d-flex justify-content-center ">
         <div class="card">
             <h1>Candidate</h1>
-            <p><a href="/register" type="button" class="btn btn-primary btn-sm"
+            <p><a href="/register-candidate" type="button" class="btn btn-primary btn-sm"
                   data-mdb-target="register">I want to get a job</a></p>
         </div>
         &nbsp;&nbsp;&nbsp;
         <div class="card">
             <h1>Company</h1>
-            <p><a href="/register" type="button" class="btn btn-primary btn-sm"
+            <p><a href="/register-company" type="button" class="btn btn-primary btn-sm"
                   data-mdb-target="register">I want to recruit</a></p>
         </div>
     </div>
 
-    <img src="../static/images/jobs-register.jpeg"
+    <img src="../static/images/job-register.jpeg"
          class="img-fluid image" alt="Sample image">
 </body>
 </html>
