--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -1,11 +1,11 @@
 <!-- Sidebar -->
-{{#employer}}
+{{#company}}
 <nav id="sidebarMenu" class="collapse d-lg-block sidebar collapse bg-white">
   <div class="position-sticky">
     <div class="list-group list-group-flush mx-3 mt-4">
 
-      <a href="/dashboard-employer/{{id}}" class="list-group-item list-group-item-action py-2 ripple
-       {{#dashboard-employerActive}}active{{/dashboard-employerActive}}" aria-current="true">
+      <a href="/dashboard-company/{{id}}" class="list-group-item list-group-item-action py-2 ripple
+       {{#dashboard-companyActive}}active{{/dashboard-companyActive}}" aria-current="true">
         <i class="fas fa-chart-line fa-fw me-3"></i><span>Dashboard</span>
       </a>
 
@@ -17,5 +17,5 @@
     </div>
   </div>
 </nav>
-{{/employer}}
+{{/company}}
 <!-- Sidebar -->
