--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -9,6 +9,11 @@
         <i class="fas fa-chart-line fa-fw me-3"></i><span>Dashboard</span>
       </a>
 
+      <a href="/jobs-company/{{id}}" class="list-group-item list-group-item-action py-2 ripple
+       {{#jobs-companyActive}}active{{/jobs-companyActive}}" aria-current="true">
+        <i class="fas fa-briefcase fa-fw me-3"></i><span>Jobs company</span>
+      </a>
+
       <a href="/announcement/{{id}}" class="list-group-item list-group-item-action py-2 ripple
         {{#announcementActive}}active{{/announcementActive}}">
         <i class="fa-solid fa-list-ul fa-fw me-3"></i><span>Announcement</span>
